# slm_inference_rs

./: .gitmodules  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md
.cargo/: config.toml
crates/epubscan/: Cargo.toml  README.md
crates/epubscan/src/: lib.rs  tests.rs
crates/fb2scan/: Cargo.toml  README.md
crates/fb2scan/src/: lib.rs  tests.rs
crates/slm_bitnet/: Cargo.toml
crates/slm_camelid/: Cargo.toml
crates/slm_ikllama/: Cargo.toml  README.md
crates/slm_ikllama/src/: backend.rs  batch.rs  context.rs  lib.rs  model.rs  vocab.rs
crates/slm_ikllama_sys/: Cargo.toml  README.md  build.rs  wrapper.h
crates/slm_ikllama_sys/src/: lib.rs
crates/slm_llama/: Cargo.toml  README.md  build.rs  exports.map
crates/slm_llama/src/: backend.rs  batch.rs  context.rs  lib.rs  model.rs  vocab.rs
examples/backend/: Cargo.toml
examples/backend/src/: lib.rs
examples/lore_extractor/: Cargo.toml  alice.epub  yesno.json  yesno1.json
examples/lore_extractor/src/: backend.rs  ents.rs  main.rs  sayhi.rs  yesno.rs
slm_inference/: Cargo.toml  README.md
slm_inference/src/: answer.rs  chat.rs  errors.rs  forkable.rs  formatter.rs  inference.rs  lib.rs  llg_lark.rs  oracle.rs  simple_oracle.rs  x_oracle.rs
slm_inference/src/core/: mod.rs  shared_ptr.rs
slm_inference/src/hf/: mod.rs
slm_inference/src/models/: gemma4.rs  llama3.rs  mistal.rs  mod.rs  phi4.rs  qwen25.rs
slm_inference/src/slm/: answer.rs  assistant.rs  async_assistant.rs  context.rs  errors.rs  formatter.rs  hf_model.rs  inference.rs  llg_lark.rs  mod.rs  model.rs  oracle.rs  oracle_async.rs  simple_inference.rs  simple_vocab.rs  vocab.rs
