[workspace]
resolver = "2"
members = [
    "crates/*",
    "examples/*",
    "slm_inference",
]

[workspace.package]
authors = ["Alexey Sudachen"]
edition = "2024"
version = "0.1.3"
homepage = "https://github.com/sudachen/slm_inference_rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sudachen/slm_inference_rs"
rust-version = "1.96.0"
readme = "README.md"

exclude = [
    "examples/*"
]

[workspace.dependencies]
slm_inference = { path = "slm_inference" }
quick-xml = { version = "0.39", features = ["encoding","serialize"] }
unicode-segmentation = "1.10"
hashbrown = "0.17"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
hf-hub = "0.5" # Rust SDK for Hugging Face
indicatif = "0.18" # For a nice progress bar (optional but recommended for 9GB files)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ouroboros = "0.18"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
fb2 = "0.4"
whatlang = "0.18"
bindgen = "0.72.1"
cmake = "0.1.58"
glob = "0.3.3"
walkdir = "2.5.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
find_cuda_helper = "0.2.0"
cc = "1.2.62"
thiserror = "2.0.18"
enum_dispatch = "0.3"
itertools = "0.15"
llguidance = "1.7"
schemars = "1.2"
strum = { version = "0.28", features = ["derive"] }
tokio = { version = "1.45", features = ["full"] }
