[package]
name = "slm_inference"
version = "0.1.0"

description = "Backend-agnostic trait layer for running Small Language Model (SLM) inference in Rust."

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
hf-hub = { workspace = true }
enum_dispatch = { workspace = true }


