[package]
name = "epubscan"

version = "0.1.1"

description = "EPUB scanner for slm_inference tests and examples"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true

[dependencies]
quick-xml = { workspace = true }
zip = { workspace = true }
anyhow = { workspace = true }
whatlang = { workspace = true }
