[package]
name = "epubscan"
version = "0.1.2"
description = "EPUB scanner for slm_inference tests and examples"
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
quick-xml = { workspace = true }
zip = { workspace = true }
anyhow = { workspace = true }
whatlang = { workspace = true }
