[package]
name = "slm_ikllama"
version = "0.1.4"
edition = "2024"

description = "ik_llama.cpp backend for slm_inference"

authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
slm_ikllama_sys = { path = "../slm_ikllama_sys", version = "^0.1.1" }
slm_inference = { path = "../../slm_inference", version = "^0.1.1" }
tracing = { workspace = true }
toktrie = "1.7.6"

[features]
cuda = ["slm_ikllama_sys/cuda"]
native = ["slm_ikllama_sys/native"]
default = ["cuda","native"]
