[package]
name = "slm_ikllama_sys"
version = "0.1.0"

description = "ik_llama.cpp rust sys bindings"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"


include = [
    "wrapper.h",
    "wrapper.cpp",
    "build.rs",
    "src",
    "ik_llama.cpp/CMakeLists.txt",
    "ik_llama.cpp/cmake",
    "ik_llama.cpp/common/cmake",
    "ik_llama.cpp/common/**/*.h*",
    "ik_llama.cpp/common/**/*.c*",
    "ik_llama.cpp/common/**/CMakeLists.txt",
    "ik_llama.cpp/ggml/**/*.h",
    "ik_llama.cpp/ggml/**/*.c*",
    "ik_llama.cpp/ggml/**/*.m*",
    "ik_llama.cpp/ggml/**/CMakeLists.txt",
    "ik_llama.cpp/src/**/*.h*",
    "ik_llama.cpp/src/**/*.c*",
    "ik_llama.cpp/src/**/CMakeLists.txt",
    "ik_llama.cpp/include/**/*.h*",
    "ik_llama.cpp/pocs",
    "ik_llama.cpp/vendor",
    "ik_llama.cpp/convert_hf_to_gguf.py"
]

[dependencies]


[build-dependencies]
bindgen = { workspace = true }
cmake = { workspace = true }
glob = { workspace= true }
walkdir = { workspace= true }
cc = { workspace = true }
find_cuda_helper = { workspace = true }

[features]
cuda = []
native = []
default = ["cuda","native"]
