[package]
name = "slm_llama"
version = "0.1.0"

description = "llama.cpp backend for slm_inference"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"

[lib]
name = "slm_llama"
crate-type = ["dylib"]

[dependencies]
llama-cpp-sys-2 = "0.1.146"
slm_inference = { path = "../../slm_inference", version = "0.1.0" }
tracing = { workspace = true }

[features]
# По умолчанию можно оставить чистый CPU без дополнительных либdefault = []
cuda = ["llama-cpp-sys-2/cuda"]
vulkan = ["llama-cpp-sys-2/vulkan"]
metal = ["llama-cpp-sys-2/metal"]




