[package]
name = "slm_llama"
version = "0.1.2"

description = "llama.cpp backend for slm_inference"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"

[lib]
name = "slm_llama"
crate-type = ["dylib"]

[dependencies]
llama-cpp-sys-2 = "0.1.146"
slm_inference = { path = "../../slm_inference", version = "^0.1.1" }
tracing = { workspace = true }
toktrie = "1.7.6"

[features]
vulkan = ["llama-cpp-sys-2/vulkan"]
metal = ["llama-cpp-sys-2/metal"]




