[package]
name = "lore_extractor"
version = "0.1.1"
edition = "2024"
publish = false

[dependencies]
clap = {workspace = true}
anyhow = {workspace = true}
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
epubscan = {path="../../crates/epubscan", version = "^0.1.1" }
slm_inference = {path = "../../slm_inference", version= "^0.1.1" }
slm_llama = {path = "../../crates/slm_llama", version= "^0.1.1", features=["vulkan"]}
slm_ikllama = {path = "../../crates/slm_ikllama", version= "^0.1.1", features=["cuda","native"]}
itertools = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
backend = {path = "../backend", version = "^0.1.1", features=["ikllama","llama"]}
schemars = { workspace = true }
